--- a/css/maps.css
+++ b/css/maps.css
@@ -1,25 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Lato");
-body {
-    font-family: Lato, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color: #333;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #333;
-}
-
-p {
-    margin-bottom: 0.5ex;
-    font-size: 14px;
-}
-
 .footnote {
     font-size: 12px;
     padding-bottom: 2em;
@@ -32,28 +10,6 @@ p {
 
 .title {
     text-align: center;
-}
-
-a {
-    color: #000;
-    font-size: 12px;
-    padding-right: 40px;
-}
-
-a:link {
-    text-decoration: none;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-a:active {
-    text-decoration: underline;
 }
 
 .btn-start {
@@ -148,6 +104,11 @@ path.thresh {
     display: table;
     font-size: 12px;
     font-weight: 400;
+}
+
+#legend-space {
+    height: 59px;
+    width: 100%;
 }
 
 .legend-item {
