--- a/css/maps.css
+++ b/css/maps.css
@@ -20,6 +20,7 @@
     border-color: none;
     line-height: 1;
     text-transform: uppercase;
+    text-align: center;
 }
 
 a.tag {
@@ -47,6 +48,7 @@ a.tag {
 #mapholder {
     margin-top: 30px;
 }
+
 .threshmaps {
     display: inline-block;
     width: 33%;
@@ -56,6 +58,7 @@ a.tag {
 img {
     width: 100%;
 }
+
 .counties,
 thresh {
     fill: none;
@@ -109,6 +112,7 @@ path.thresh {
 #legend-space {
     height: 59px;
     width: 100%;
+    text-align: center;
 }
 
 .legend-item {
