--- a/css/urban-text.css
+++ b/css/urban-text.css
@@ -152,3 +152,23 @@ font-family: Georgia, serif;
 .copy {
   font-size: 0.75em;
 }
+
+.urban-button {
+    font-size: 14px;
+    font-family: Lato, sans-serif;
+    padding: 14px;
+    cursor: pointer;
+    border: none;
+    color: white;
+    background-color: #1696d2;
+    display: inline-block;
+    line-height: 12px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-right: 1px;
+}
+
+.urban-button:hover {
+    background-color: #000;
+    text-decoration: none;
+}
